# Spectral_SpM

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  conanfile.txt
analysis/: generate_omegas.py  generate_test_data.py  plot_convergence.py  plot_green.py  plot_res.py  plot_svd.py  test_svd.py  tidy_input_data.py
settings/: settings.json
source/: admm.cpp  admm.h  cli.cpp  cli.h  io.cpp  io.h  log.h  main.cpp  mpreal.h  spm.cpp  spm.h  structs.h  svd.cpp  svd.h
